# larry_recsys

./: .clineignore  .clinerules  .env.example  .gitignore  Makefile  README.md  inspect_venues_data.ipynb  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
docs/: Cloud-Scale RPG TDD.md  Conflating Overture and OSM Data.md  conflation.md
scripts/: fetch_osm_mini_region.py  inspect_data.py
src/benchmarks/: conflation_speed.py
src/config/: data_foundation.py
src/data/: conflation.py  osm_ingest.py  overture_ingest.py
src/io/: gcs.py
src/pipelines/: __init__.py  run_local.py  shared.py
src/pipelines/airflow/: __init__.py  validation.py
src/pipelines/airflow/dags/: rpg_data_foundation_dag.py  rpg_data_foundation_na_dag.py
src/rpg_io/: __init__.py
tests/: conftest.py
tests/config/: test_data_foundation.py
tests/data/: __init__.py  test_conflation.py  test_osm_ingest.py  test_overture_ingest.py
tests/io/: test_gcs.py
tests/pipelines/: test_airflow_validation.py  test_rpg_data_foundation_dag.py  test_run_local.py
tests/scripts/: test_fetch_osm_mini_region.py  test_placeholder.py
