[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "larry-recsys-data-foundation"
version = "0.1.0"
description = "Data foundation (Overture + OSM conflation) for RPG TDD POC"
requires-python = ">=3.11"
dependencies = [
  "pytest>=8.0.0",
  "pandas>=2.2.0",
  "duckdb>=1.0.0",
  "pyarrow>=15.0.0",
  "pydantic>=2.0.0",
  "apache-airflow>=2.9.0",
  "google-cloud-storage>=2.17.0",
  "h3>=3.7.0"
]

[project.scripts]
rpg-run-local = "pipelines.run_local:main"

[project.optional-dependencies]
dev = [
  "black>=24.0.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by black

[tool.black]
target-version = ["py311"]
line-length = 88
include = "\\.pyi?$"
src = ["src", "tests", "scripts"]

